force-app/main/default/objects/Order/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <formula>IF( NOT(ISBLANK(Contract.CompanySignedDate)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>