force-app/main/default/objects/Order/fields/Site_Survey_Approved__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Survey Approved</label>
    <type>Checkbox</type>
</CustomField>