force-app/main/default/objects/Order/fields/Site_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Date__c</fullName>
    <label>Site Survey Date</label>
    <type>Date</type>
</CustomField>