force-app/main/default/objects/Order/fields/Zendesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the Zendesk ticket ID</inlineHelpText>
    <label>Zendesk Ticket ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>