force-app/main/default/objects/Order/recordTypes/DBX_Splicecom.recordType-meta.xml
<RecordType>
    <fullName>DBX_Splicecom</fullName>
    <active>true</active>
    <label>DBX Splicecom</label>
</RecordType>