force-app/main/default/objects/Order/recordTypes/Giganet_Fibre.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Fibre</fullName>
    <active>true</active>
    <description>Giganet ELITE and UltraBEAM services</description>
    <label>Giganet Fibre</label>
</RecordType>