force-app/main/default/objects/Order/validationRules/Check_contract_signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_contract_signed</fullName>
    <active>true</active>
    <description>Check the contract is signed before progressing the order</description>
    <errorConditionFormula>AND(
Contract_Signed__c = false, 
OR(
Text(Status) = &quot;Validated&quot;,
Text(Status) = &quot;Contract Signed&quot;
)
)</errorConditionFormula>
    <errorMessage>The contract linked to this order must have been signed before you can progress the order.</errorMessage>
</ValidationRule>